tests/negative/gold/block_test.gold
tests/negative/block_test.toit:8:9: error: Unexpected block
  a.x = : debug it
        ^~~~~~~~~~
tests/negative/block_test.toit:8:9: error: Can't assign block to instance member
  a.x = : debug it
        ^~~~~~~~~~
Compilation failed.
